--- a/index.html
+++ b/index.html
@@ -470,6 +470,6 @@
       </div>
     </template>
 
-    <script src="./js/main.js"></script>
+    <script type="module" src="./js/main.js"></script>
   </body>
 </html>
