--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
         <h2 class="notice__title">Ваше объявление</h2>
         <form
           class="ad-form"
+          action= "https://24.javascript.pages.academy/keksobooking"
           method="post"
           enctype="multipart/form-data"
           autocomplete="off"
@@ -162,6 +163,7 @@
                   type="file"
                   id="avatar"
                   name="avatar"
+                  accept="image/*"
                   class="ad-form-header__input visually-hidden"
                 />
                 <label class="ad-form-header__drop-zone" for="avatar"
@@ -185,14 +187,17 @@
               id="title"
               name="title"
               type="text"
+              minlength="30"
+              maxlength="100"
               placeholder="Милая, уютная квартирка в центре Токио"
+              required
             />
           </fieldset>
           <fieldset class="ad-form__element ad-form__element--wide">
             <label class="ad-form__label" for="address"
               >Адрес (координаты)</label
             >
-            <input id="address" name="address" type="text" />
+            <input id="address" name="address" type="text" readonly />
           </fieldset>
           <fieldset class="ad-form__element">
             <label class="ad-form__label" for="type">Тип жилья</label>
@@ -206,7 +211,7 @@
           </fieldset>
           <fieldset class="ad-form__element">
             <label class="ad-form__label" for="price">Цена за ночь, руб.</label>
-            <input id="price" name="price" type="number" placeholder="5000" />
+            <input id="price" name="price" type="number" maxlength="1000000" placeholder="5000" required />
           </fieldset>
           <fieldset class="ad-form__element ad-form__element--time">
             <label class="ad-form__label" for="timein"
