Добавит возможность загрузки аватарки

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                   type="file"
                   id="avatar"
                   name="avatar"
-                  accept="image/*"
+                  accept=".jpg,.jpeg,.png"
                   class="ad-form-header__input visually-hidden"
                 />
                 <label class="ad-form-header__drop-zone" for="avatar"
