Добавит возможность загрузки фото жилья

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                   type="file"
                   id="images"
                   name="images"
-                  accept="image/*"
+                  accept=".jpg,.jpeg,.png"
                   class="ad-form__input visually-hidden"
                 />
                 <label for="images" class="ad-form__drop-zone"
